Refactor reboot command execution to use ProcessBuilder
Replaced Runtime.exec with ProcessBuilder for reboot command.